<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:drawableStartCompat="@mipmap/ic_back_round" />

        <TextView
            android:id="@+id/favorites"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textColor="#8278DD"
            android:text="@string/agregar_a_favoritos" />


    </LinearLayout>


    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/img" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#8278DD"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/descripci_n"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:padding="10dp" />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="#8278DD"
                android:gravity="center"
                android:text="@string/idioma"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pageCount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="#8278DD"
                android:gravity="center"
                android:text="@string/paginas"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/publishedDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="#8278DD"
                android:gravity="center"
                android:text="@string/publishDate"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>